# control_huelight_python

./: Changelog.md  README.md  README.rst  pyproject.toml
control_huelight_python/: control.py
control_huelight_python/devices/: __init__.py  devices.py
control_huelight_python/utils/: color_utils.py
tests/: test_change_light_color.py  test_control_huelight.py  test_setup_devices.py  test_version.py
