[tool.poetry]
authors = ["tynguyen <tynguyen@seas.upenn.edu>"]
description = ""
name = "control_huelight_python"
version = "0.1.1"

[tool.poetry.dependencies]
phue = "^1.1"
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
